# playground

./: .gitignore  pyproject.toml
AB-testing/: 01_ttest.ipynb  02_ztest.ipynb  03_bootstrap.ipynb  04_linearization.ipynb  05_stratification.ipynb  06_cuped.ipynb  07_linear_regression.ipynb
